# gep_host_service

./: .gitignore  MANIFEST.in  README.md  host.cfg  requirements.txt  setup.cfg
config/: MasterConfig.cfg  host.cfg
docs/source/: conf.py  index.rst
gep_host/: __init__.py  __main__.py  app.py  routes.py  sender.py
gep_host/static/fonts-icons/: bootstrap-icons.css
gep_host/templates/: base.html  index.html  libraries.html  programs.html  runs.html  upload.html  users_tokens.html
gep_host/utils/: delete_program.py  delete_run.py  execute_program.py  helpers.py  install_program.py  occupy_cpu.py  replacer.py  run_program.py  set_conf.py  set_conf_init.py
