[metadata]
# the package will be referenced with this name
name = gep_host_service

# read the version number from the file
version = attr: gep_host.__version__

author = Daniel Tuzes
author_email = tuzesdaniel@gmail.com
description = Install and execute data-oriented python program from a webservice
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danieltuzes/gep_host_service
keywords = python, webservice, data

# tells the package repository the versions you support
# python doesn't care about this info
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    
[options]
# the code needs this/these external libraries
# version number is optionial
install_requires=
    pandas
    flask
    gevent
    psutil
    unidecode

packages=
    gep_host

package_dir=
    gep_host = gep_host

# ofc you already have python, but this request must be satisfied
python_requires=>=3.8

# tests_require is deprecated. Tell the user how to test
# and provide a separate file such as requirements.txt


# This can be moved to a pylama.ini file
# But I thought it is better here
[pylama]
linters = mccabe,pydocstyle,pycodestyle,pyflakes,pylint
ignore = D213,D203
skip = doc/*

[pylama:mccabe]
complexity = 10

[darglint]
docstring_style=numpy